2006-05-04  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/dlvhex/PluginInterface.h: Changed rewriter stream types to pointers.

	* include/dlvhex/globals.h: Added string to be passed to the ASP
	solver for adding a maxint-directive.

	* src/dlvhex/ASPsolver.cpp: (callSolver): Added maxint-directive to
	the program to be solved, from a global variable set in the Hex-parser.

	* src/dlvhex/AnswerSet.cpp: (moreExpensiveThan): Corrected error in
	reading weights of the specified weight-vector.

	* src/dlvhex/Atom.cpp: (Constructor): Moved assertion for nonground
	predicate names to initialization of non-propositional atoms. Added
	SyntaxError in case of variable propositional atoms.

	* src/dlvhex/HexParser.ypp: Added parsing of maxint-directive.
	Admitted empty parentheses for external atoms with output arity zero.

	* src/dlvhex/dlvhex.cpp: (main): Corrected handling of streams and
	rewriters.

	* src/dlvhex/globals.cpp: Added string for maxint-directive.


2006-05-03  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/dlvhex/AnswerSet.h: New File.

	* include/dlvhex/Makefile.am: Added AnswerSet.h.

	* include/dlvhex/OutputBuilder.h: Changed all AtomSet to AnswerSet.

	* include/dlvhex/Program.h: Added addition and retrieval for weak
	constraints.
	* src/dlvhex/Program.cpp: Likewise.

	* include/dlvhex/ResultContainer.h: Changed type of result from
	std::vector<AtomSet> to std::set<AnswerSetPtr,
	ResultContainer::AnswerSetPtrCompare>. Added comparison operator
	for AnswerSetPtrCompare. Added handling of weak constraint-
	auxiliary predicate. Added vector for optimal costs.
	* src/dlvhex/ResultContainer.cpp: Likewise.

	* include/dlvhex/Rule.h: Added class for weak constraints, derived
	from Rule.
	* src/dlvhex/Rule.cpp: Likewise.

	* src/dlvhex/AnswerSet.cpp: New file.

	* src/dlvhex/DLVresultParser.ypp: Introduced number type for
	integer handling.
	* src/dlvhex/DLVresultScanner.lpp: Likewise.
